fix: improve lockup button icon color contrast

--- a/src/main.scss
+++ b/src/main.scss
@@ -117,7 +117,7 @@ body {
 .lockupControls .play:hover,
 .lockupControls .menu:hover {
   ._svg-icon {
-    background: var(--text-color);
+    background: var(--background-light);
   }
 }
 
